crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__if_expressions-3.snap
---
source: crates/rym_parser/src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
if (true == false) then ("Hello Universe!") else ("Hello World!")
---

Some(
    Spanned(
        If {
            condition: Spanned(
                Binary(
                    Spanned(
                        Ident(
                            Spanned(
                                "true",
                                4..8,
                            ),
                        ),
                        4..8,
                    ),
                    Eq,
                    Spanned(
                        Ident(
                            Spanned(
                                "false",
                                12..17,
                            ),
                        ),
                        12..17,
                    ),
                ),
                4..17,
            ),
            then_branch: Spanned(
                Literal(
                    Spanned(
                        String("Hello Universe!"),
                        25..42,
                    ),
                ),
                25..42,
            ),
            else_branch: Some(
                Spanned(
                    Literal(
                        Spanned(
                            String("Hello World!"),
                            50..64,
                        ),
                    ),
                    50..64,
                ),
            ),
        },
        0..65,
    ),
)

--- Errors ---
[]
---
