crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__if_expressions-4.snap
---
source: crates/rym_parser/src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
if true == false then "Hello Universe!" else "Hello World!"
---

Some(
    Spanned(
        If {
            condition: Spanned(
                Binary(
                    Spanned(
                        Ident(
                            Spanned(
                                "true",
                                3..7,
                            ),
                        ),
                        3..7,
                    ),
                    Eq,
                    Spanned(
                        Ident(
                            Spanned(
                                "false",
                                11..16,
                            ),
                        ),
                        11..16,
                    ),
                ),
                3..16,
            ),
            then_branch: Spanned(
                Literal(
                    Spanned(
                        String("Hello Universe!"),
                        22..39,
                    ),
                ),
                22..39,
            ),
            else_branch: Some(
                Spanned(
                    Literal(
                        Spanned(
                            String("Hello World!"),
                            45..59,
                        ),
                    ),
                    45..59,
                ),
            ),
        },
        0..59,
    ),
)

--- Errors ---
[]
---
