crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__if_expressions-5.snap
---
source: crates/rym_parser/src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
if true then "Hello Universe!"
else "Hello World!"
---

Some(
    Spanned(
        If {
            condition: Spanned(
                Ident(
                    Spanned(
                        "true",
                        3..7,
                    ),
                ),
                3..7,
            ),
            then_branch: Spanned(
                Literal(
                    Spanned(
                        String("Hello Universe!"),
                        13..30,
                    ),
                ),
                13..30,
            ),
            else_branch: Some(
                Spanned(
                    Literal(
                        Spanned(
                            String("Hello World!"),
                            36..50,
                        ),
                    ),
                    36..50,
                ),
            ),
        },
        0..50,
    ),
)

--- Errors ---
[]
---
