crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__if_expressions-6.snap
---
source: crates/rym_parser/src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
if stuff_goes_right(1, 2, 9) then {
	print("Hello Universe!");
	20;
} else {
	print("Hello World!");
	10;
}
---

Some(
    Spanned(
        If {
            condition: Spanned(
                Call {
                    func: Spanned(
                        Ident(
                            Spanned(
                                "stuff_goes_right",
                                3..19,
                            ),
                        ),
                        3..19,
                    ),
                    args: Spanned(
                        [
                            Spanned(
                                Literal(
                                    Spanned(
                                        Int(1),
                                        20..21,
                                    ),
                                ),
                                20..21,
                            ),
                            Spanned(
                                Literal(
                                    Spanned(
                                        Int(2),
                                        23..24,
                                    ),
                                ),
                                23..24,
                            ),
                            Spanned(
                                Literal(
                                    Spanned(
                                        Int(9),
                                        26..27,
                                    ),
                                ),
                                26..27,
                            ),
                        ],
                        19..28,
                    ),
                },
                3..28,
            ),
            then_branch: Spanned(
                Block(
                    Spanned(
                        [
                            Spanned(
                                Call {
                                    func: Spanned(
                                        Ident(
                                            Spanned(
                                                "print",
                                                37..42,
                                            ),
                                        ),
                                        37..42,
                                    ),
                                    args: Spanned(
                                        [
                                            Spanned(
                                                Literal(
                                                    Spanned(
                                                        String("Hello Universe!"),
                                                        43..60,
                                                    ),
                                                ),
                                                43..60,
                                            ),
                                        ],
                                        42..61,
                                    ),
                                },
                                37..62,
                            ),
                            Spanned(
                                Literal(
                                    Spanned(
                                        Int(20),
                                        64..66,
                                    ),
                                ),
                                64..67,
                            ),
                        ],
                        34..69,
                    ),
                ),
                34..69,
            ),
            else_branch: Some(
                Spanned(
                    Block(
                        Spanned(
                            [
                                Spanned(
                                    Call {
                                        func: Spanned(
                                            Ident(
                                                Spanned(
                                                    "print",
                                                    78..83,
                                                ),
                                            ),
                                            78..83,
                                        ),
                                        args: Spanned(
                                            [
                                                Spanned(
                                                    Literal(
                                                        Spanned(
                                                            String("Hello World!"),
                                                            84..98,
                                                        ),
                                                    ),
                                                    84..98,
                                                ),
                                            ],
                                            83..99,
                                        ),
                                    },
                                    78..100,
                                ),
                                Spanned(
                                    Literal(
                                        Spanned(
                                            Int(10),
                                            102..104,
                                        ),
                                    ),
                                    102..105,
                                ),
                            ],
                            75..107,
                        ),
                    ),
                    75..107,
                ),
            ),
        },
        0..107,
    ),
)

--- Errors ---
[]
---
