crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__if_expressions-7.snap
---
source: crates/rym_parser/src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
if true then print("Hello Universe!")
---

Some(
    Spanned(
        If {
            condition: Spanned(
                Ident(
                    Spanned(
                        "true",
                        3..7,
                    ),
                ),
                3..7,
            ),
            then_branch: Spanned(
                Call {
                    func: Spanned(
                        Ident(
                            Spanned(
                                "print",
                                13..18,
                            ),
                        ),
                        13..18,
                    ),
                    args: Spanned(
                        [
                            Spanned(
                                Literal(
                                    Spanned(
                                        String("Hello Universe!"),
                                        19..36,
                                    ),
                                ),
                                19..36,
                            ),
                        ],
                        18..37,
                    ),
                },
                13..37,
            ),
            else_branch: None,
        },
        0..37,
    ),
)

--- Errors ---
[]
---
