crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__if_expressions-8.snap
---
source: crates/rym_parser/src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
if true then { print("Hello Universe!"); }
---

Some(
    Spanned(
        If {
            condition: Spanned(
                Ident(
                    Spanned(
                        "true",
                        3..7,
                    ),
                ),
                3..7,
            ),
            then_branch: Spanned(
                Block(
                    Spanned(
                        [
                            Spanned(
                                Call {
                                    func: Spanned(
                                        Ident(
                                            Spanned(
                                                "print",
                                                15..20,
                                            ),
                                        ),
                                        15..20,
                                    ),
                                    args: Spanned(
                                        [
                                            Spanned(
                                                Literal(
                                                    Spanned(
                                                        String("Hello Universe!"),
                                                        21..38,
                                                    ),
                                                ),
                                                21..38,
                                            ),
                                        ],
                                        20..39,
                                    ),
                                },
                                15..40,
                            ),
                        ],
                        13..42,
                    ),
                ),
                13..42,
            ),
            else_branch: None,
        },
        0..42,
    ),
)

--- Errors ---
[]
---
