crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__literal_expressions-10.snap
---
source: crates/rym_parser/src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
'\r'
---

Some(
    Spanned(
        Literal(
            Spanned(
                Char('\r'),
                0..4,
            ),
        ),
        0..4,
    ),
)

--- Errors ---
[]
---
