crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__literal_expressions-11.snap
---
source: crates/rym_parser/src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
 "abc" 
---

Some(
    Spanned(
        Literal(
            Spanned(
                String("abc"),
                1..6,
            ),
        ),
        1..6,
    ),
)

--- Errors ---
[]
---
