crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__literal_expressions-12.snap
---
source: crates/rym_parser/src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
 "Hello World!\n" 
---

Some(
    Spanned(
        Literal(
            Spanned(
                String("Hello World!\n"),
                1..17,
            ),
        ),
        1..17,
    ),
)

--- Errors ---
[]
---
