crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__literal_expressions-3.snap
---
source: crates/rym_parser/src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
1.0
---

Some(
    Spanned(
        Literal(
            Spanned(
                Float(1),
                0..3,
            ),
        ),
        0..3,
    ),
)

--- Errors ---
[]
---
